<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llInputOtp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:padding="8dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:padding="1dp"
        android:text="@string/verify_your_phone_no"
        android:textAlignment="textStart"

        android:visibility="visible" />


    <TextView
        android:id="@+id/tvTitlePhoneNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="1dp"
        android:text="@string/enter_code_that_sent_to_"
        android:textAlignment="textStart"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvTitleTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="1dp"
        android:text="@string/resend_code_after_"
        android:textAlignment="textStart"
        android:visibility="visible" />

    <include
        layout="@layout/view_login_otp_input_box"
        android:padding="1dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/otp_enter_valid"
        android:inputType="number|phone"
        android:maxLength="6"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:textColor="?attr/colorTextPrimary"
        android:textColorHint="?attr/colorTextPrimary" />

    <Button
        android:id="@+id/btOtpVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="?attr/colorBrand"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/btOtpResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/otp_resend"
        android:textAllCaps="false"
        android:textColor="?attr/colorBrandLight" />

    <TextView
        android:id="@+id/btWrongNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/transparent"
        android:padding="5dp"
        android:text="@string/entered_wrong_number"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimary"
        android:visibility="gone" />

</LinearLayout>