<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llInputOtp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorBackground"
    android:orientation="vertical"
    android:padding="8dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="Jannat - Turkish Drama"
            android:textColor="?attr/colorTextPrimary"
            android:textSize="@dimen/text_size_large_1" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2018 | Drama | Bangla Dubbed | 144p : 55MB"
            android:textColor="?attr/colorTextPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_add_black_24dp"
            android:drawablePadding="8dp"
            android:text="@string/add"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?attr/colorTextPrimary" />

        <Button
            android:id="@+id/btLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_thumb_up_black_24dp"
            android:drawablePadding="8dp"
            android:text="@string/like"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?attr/colorTextPrimary" />

        <Button
            android:id="@+id/btShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_share_black_24dp"
            android:drawablePadding="8dp"
            android:text="@string/share"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?attr/colorTextPrimary" />

        <Button
            android:id="@+id/btDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_download"
            android:drawablePadding="8dp"
            android:text="@string/download"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?attr/colorTextPrimary" />


    </LinearLayout>


</LinearLayout>